@@ -38,6 +38,7 @@
 
 ifeq ($(NXGLIB_BITSPERPIXEL),1)
 NXGLIB_SUFFIX	:= _1bpp
+SETP_CSRC	:= nxglib_setpixel_1bpp.c
 RFILL_CSRC	:= nxglib_fillrectangle_1bpp.c
 TFILL_CSRC	:= nxglib_filltrapezoid_1bpp.c
 RMOVE_CSRC	:= nxglib_moverectangle_1bpp.c
@@ -45,6 +46,7 @@ RCOPY_CSRC	:= nxglib_copyrectangle_1bpp.c
 endif
 ifeq ($(NXGLIB_BITSPERPIXEL),2)
 NXGLIB_SUFFIX	:= _2bpp
+SETP_CSRC	:= nxglib_setpixel_2bpp.c
 RFILL_CSRC	:= nxglib_fillrectangle_2bpp.c
 TFILL_CSRC	:= nxglib_filltrapezoid_2bpp.c
 RMOVE_CSRC	:= nxglib_moverectangle_2bpp.c
@@ -52,6 +54,7 @@ RCOPY_CSRC	:= nxglib_copyrectangle_2bpp.c
 endif
 ifeq ($(NXGLIB_BITSPERPIXEL),4)
 NXGLIB_SUFFIX	:= _4bpp
+SETP_CSRC	:= nxglib_setpixel_4bpp.c
 RFILL_CSRC	:= nxglib_fillrectangle_4bpp.c
 TFILL_CSRC	:= nxglib_filltrapezoid_4bpp.c
 RMOVE_CSRC	:= nxglib_moverectangle_4bpp.c
@@ -59,6 +62,7 @@ RCOPY_CSRC	:= nxglib_copyrectangle_4bpp.c
 endif
 ifeq ($(NXGLIB_BITSPERPIXEL),8)
 NXGLIB_SUFFIX	:= _8bpp
+SETP_CSRC	:= nxglib_setpixel_8bpp.c
 RFILL_CSRC	:= nxglib_fillrectangle_8bpp.c
 TFILL_CSRC	:= nxglib_filltrapezoid_8bpp.c
 RMOVE_CSRC	:= nxglib_moverectangle_8bpp.c
@@ -66,6 +70,7 @@ RCOPY_CSRC	:= nxglib_copyrectangle_8bpp.c
 endif
 ifeq ($(NXGLIB_BITSPERPIXEL),16)
 NXGLIB_SUFFIX	:= _16bpp
+SETP_CSRC	:= nxglib_setpixel_16bpp.c
 RFILL_CSRC	:= nxglib_fillrectangle_16bpp.c
 TFILL_CSRC	:= nxglib_filltrapezoid_16bpp.c
 RMOVE_CSRC	:= nxglib_moverectangle_16bpp.c
@@ -73,6 +78,7 @@ RCOPY_CSRC	:= nxglib_copyrectangle_16bpp.c
 endif
 ifeq ($(NXGLIB_BITSPERPIXEL),24)
 NXGLIB_SUFFIX	:= _24bpp
+SETP_CSRC	:= nxglib_setpixel_24bpp.c
 RFILL_CSRC	:= nxglib_fillrectangle_24bpp.c
 TFILL_CSRC	:= nxglib_filltrapezoid_24bpp.c
 RMOVE_CSRC	:= nxglib_moverectangle_24bpp.c
@@ -80,6 +86,7 @@ RCOPY_CSRC	:= nxglib_copyrectangle_24bpp.c
 endif
 ifeq ($(NXGLIB_BITSPERPIXEL),32)
 NXGLIB_SUFFIX	:= _32bpp
+SETP_CSRC	:= nxglib_setpixel_32bpp.c
 RFILL_CSRC	:= nxglib_fillrectangle_32bpp.c
 TFILL_CSRC	:= nxglib_filltrapezoid_32bpp.c
 RMOVE_CSRC	:= nxglib_moverectangle_32bpp.c
@@ -89,12 +96,13 @@ endif
 CPPFLAGS	+= -DNXGLIB_BITSPERPIXEL=$(NXGLIB_BITSPERPIXEL)
 CPPFLAGS	+= -DNXGLIB_SUFFIX=$(NXGLIB_SUFFIX)
 
+SETP_TMP	= $(SETP_CSRC:.c=.i)
 RFILL_TMP	= $(RFILL_CSRC:.c=.i)
 TFILL_TMP	= $(TFILL_CSRC:.c=.i)
 RMOVE_TMP	= $(RMOVE_CSRC:.c=.i)
 RCOPY_TMP	= $(RCOPY_CSRC:.c=.i)
 
-GEN_CSRCS	= $(RFILL_CSRC) $(TFILL_CSRC) $(RMOVE_CSRC) $(RCOPY_CSRC)
+GEN_CSRCS	= $(SETP_CSRC) $(RFILL_CSRC) $(TFILL_CSRC) $(RMOVE_CSRC) $(RCOPY_CSRC)
 
 ifeq ($(CONFIG_NX_LCDDRIVER),y)
 BLITDIR		= lcd
@@ -104,6 +112,13 @@ endif
 
 all:	$(GEN_CSRCS)
 .PHONY : clean distclean
+
+$(SETP_CSRC) : $(BLITDIR)/nxglib_setpixel.c nxglib_bitblit.h
+ifneq ($(NXGLIB_BITSPERPIXEL),)
+	@$(call PREPROCESS, $(BLITDIR)/nxglib_setpixel.c, $(SETP_TMP))
+	@cat $(SETP_TMP) | sed -e "/^#/d" >$@
+	@rm -f  $(SETP_TMP)
+endif
 
 $(RFILL_CSRC) : $(BLITDIR)/nxglib_fillrectangle.c nxglib_bitblit.h
 ifneq ($(NXGLIB_BITSPERPIXEL),)
@@ -137,6 +152,9 @@ clean:
 	@rm -f *~ .*.swp *.i
 
 distclean: clean
-	@rm -f nxglib_fillrectangle_*bpp.c nxglib_filltrapezoid_*bpp.c
-	@rm -f nxglib_moverectangle_*bpp.c nxglib_copyrectangle_*bpp.c
+	@rm -f nxglib_setpixel_*bpp.c
+	@rm -f nxglib_fillrectangle_*bpp.c
+	@rm -f nxglib_filltrapezoid_*bpp.c
+	@rm -f nxglib_moverectangle_*bpp.c
+	@rm -f nxglib_copyrectangle_*bpp.c
 
